--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
                 align-items:center;
                 font-family: Arial, Helvetica, sans-serif;
             }
-            h1 {color:#6400b1;}
-            table { border-collapse: collapse; cursor:pointer;}
+            h1 {color:rgba(100, 0, 169, 1);}
+            table { border-collapse: collapse; }
             tr { border:1px solid grey; }
-            tr:hover { background-color: rgba(0,0,0,.1); }
-            td { padding:5px;}
-            td b {color:#6400a9;}
+            tr.file:hover { background-color: rgba(100, 0, 169, .2); }
+            tr.file td { padding:5px; cursor:pointer;}
+            tr.file b {color:rgba(100, 0, 169, 1)}
+            tr.section td {background-color:rgba(100, 0, 169, 1); color:white; padding:10px 20px 10px 20px;}
             a { text-decoration:none; }
+            
 
         </style>
     </head>
@@ -27,7 +29,7 @@
 
         <script desc="getURLPe.js @ gist.github.com/drodsou" src="https://gist.githack.com/drodsou/cacb5409f5871588674116c6ee6dd368/raw/9a999168eeb79497e0535a5b126333bdad483100/getURLPe.js"></script>
         <script>
-  
+
             // main
             (async function () {
 
@@ -44,14 +46,37 @@
                     else (url = undefined)
                 }
 
-                // print output
-                files.sort( (a,b)=>a.file.toLowerCase() > b.file.toLowerCase()) 
-                var str = `<h1>drodsou´s gists (${files.length})</h1><table>`
-                files.forEach(f=>{
-                    //str += `<tr> <td><b><a href="${f.url}">${f.file}</a></b></td> <td><a href="${f.url}">${f.desc}</a></td> </tr>`
-                    str += `<tr onClick="window.document.location='${f.url}'"> <td><b>${f.file}</b></td> <td>${f.desc}</td> </tr>`
+                // sort by extension + name
+                //files = files.sort( (a,b) => a.file.toLowerCase() > b.file.toLowerCase() ? 1:-1 )     // fckn sort just. mandatory 1:-1. Only > works sometimes in small arrays but just by chance
+                files = files.sort( (a,b) => {
+                    // preprocess both a and b
+                    var ab = [a,b].map(e=>{
+                        e = e.file.toLowerCase()
+                        e = e.split('.').pop() + e
+                        if (e.startsWith('js')) e = '0'+e   // raise javascript to the top
+                        return e
+                    })
+                    // sort return
+                    return ab[0]>ab[1] ? 1 : -1
                 })
-                str += '</table></div>'
+
+                // print out
+                var str = (`
+                    <h1>drodsou´s gists (${files.length})</h1>
+                    <table>
+                `)
+                var curSection =''
+                files.forEach(f=>{
+                    let fExt = f.file.split('.').pop()
+                    if (fExt !== curSection) { 
+                        // new section header
+                        curSection = fExt; 
+                        str += `<tr class="section"><td colspan="2">${curSection}</td></tr>`
+                    }
+                    // normal data row
+                    str += `<tr class="file" onClick="window.document.location='${f.url}'"> <td><b>${f.file}</b></td> <td>${f.desc}</td> </tr>`
+                })
+                str += '</table>'
                 data.innerHTML = str
             })()
             
