--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
                     text.forEach( f => files.push( {file : Object.keys(f.files)[0],  url : f.html_url,  desc : f.description} )) 
 
                     // more pages remaining, acording to github api?
-                    console.dir(response.headers.Link)
-                    if (response.headers.Link && response.headers.Link[0][1] === 'rel="next"')  {
-                        url = response.headers.Link[0][0].replace(/[<>]/g,'')
+                    //console.log('response 1', response.headers.link)
+                    url = undefined
+                    if (response.headers.link) {
+                        let linkArr = (response.headers.link).replace(/</g,'').replace(/>/g,'').replace(/,/g,';').split(';').map(e=>e.trim())
+                        if (linkArr[1] === 'rel="next"')  {
+                            url = linkArr[0]
+                        }
                     }
-                    else (url = undefined)
                 }
 
                 // sort by extension + name
