--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <h1 id="theHeader"></h1>
-        <input id="theFilter"/>
+        <input id="theFilter"/> <a href="https://gist.github.com/">new gist</a>
         <div id="theTable"></div>
 
         <script src="index.js"></script>
