--- a/index.html
+++ b/index.html
@@ -3,38 +3,21 @@
     <head>
         <meta charset="utf-8">
         <title>drodsou's gists</title>
-        <meta name="description" content="">
+        <meta name="description" content="drodsou's github">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-        <style>
-            body {
-                font-family: 'Montserrat', sans-serif;
+        <link rel="stylesheet" href="./index.css">
 
-                display:flex;
-                flex-direction:column;
-                align-items:center;
-                overflow-y: scroll;
-            }
-            h1 {color:rgba(100, 0, 169, 1);}
-            table { border-collapse: collapse; width:90vw; margin-top:10px;}
-            tr { border:1px solid grey; }
-            tr.file:hover { background-color: rgba(100, 0, 169, .2); }
-            tr.file td { padding:5px; cursor:pointer;}
-            tr.file b {color:rgba(100, 0, 169, 1)}
-            tr.section td {background-color:rgba(100, 0, 169, 1); color:white; padding:10px 20px 10px 20px;}
-            a { text-decoration:none; }
-            
-
-        </style>
     </head>
     <body>
         <h1 id="theHeader"></h1>
-        <input id="theFilter"/> <a href="https://gist.github.com/">new gist</a>
+        <div id="theFilter"></div>
+        <a id="newGist" href="https://gist.github.com/">new gist</a>
         <div id="theTable"></div>
 
-        <script src="index.js"></script>
+        <script type="module" src="index.js"></script>
     
     </body>
 </html>
